[package]
name = "p2p-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
libp2p = "0.53.2"
prost = "0.12.6"
prost-types = "0.12.6"
snow = "0.9.6"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[build-dependencies]
prost-build = "0.12.6"
